welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: ';' expected but 'if' found.
	}if (estSurOrange()){
         ^